--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,20 @@ version = "0.1.0"
 
 [[bin]]
 name = "soulstar"
-path = "./src/bin/main.rs"
+path = "src/main.rs"
+
+
+[features]
+default = ["log-uart"]
+log-uart = ["dep:esp-println"]  # For Wokwi (UART output)
+log-rtt = ["dep:rtt-target"]    # For probe-rs (RTT output)
 
 [dependencies]
 esp-bootloader-esp-idf = "0.1.0"
 esp-hal = { version = "=1.0.0-beta.1", features = ["esp32c6", "unstable"] }
 
-esp-println = { version = "0.14.0", features = ["esp32c6"] }
+esp-println = { version = "0.14.0", features = ["esp32c6", "log-04"], optional = true }
+rtt-target = { version = "0.6.1", features = ["log"], optional = true }
 embassy-time = "0.4.0"
 bt-hci = { version = "0.3.2", features = [] }
 critical-section = "1.2.0"
@@ -28,7 +35,9 @@ esp-wifi = { version = "0.14.1", features = [
 ] }
 static_cell = { version = "2.1.0", features = ["nightly"] }
 trouble-host = { version = "0.1.0", features = ["gatt"] }
-
+esp-hal-smartled = { version = "0.15.0", features = ["esp32c6"] }
+smart-leds = "0.4.0"
+log = "0.4.27"
 
 [profile.dev]
 # Rust debug is too slow.
