--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ rtt-target = { version = "0.6.1", features = ["log"], optional = true }
 embassy-time = "0.4.0"
 bt-hci = { version = "0.3.2", features = [] }
 critical-section = "1.2.0"
-embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "arch-riscv32", "executor-interrupt"] }
+embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "executor-interrupt"] }
 embedded-io = "0.6.1"
 embedded-io-async = "0.6.1"
 esp-alloc = "0.8.0"
