--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,22 +21,20 @@ esp-println = { version = "0.14.0", features = ["esp32c6", "log-04"], optional =
 rtt-target = { version = "0.6.1", features = ["log"], optional = true }
 embassy-time = "0.4.0"
 bt-hci = { version = "0.3.2", features = [] }
-critical-section = "1.2.0"
 embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "arch-riscv32"] }
-embedded-io = "0.6.1"
-embedded-io-async = "0.6.1"
 esp-alloc = "0.8.0"
 esp-hal-embassy = { version = "0.8.1", features = ["esp32c6"] }
 esp-wifi = { version = "0.14.1", features = [
-  "ble",
-  "builtin-scheduler",
-  "esp-alloc",
-  "esp32c6",
+    "ble",
+    "builtin-scheduler",
+    "esp-alloc",
+    "esp32c6",
 ] }
 embassy-sync = { version = "0.7.0", features = ["log"] }
 embassy-futures = { version = "0.1.1" }
 static_cell = { version = "2.1.0", features = ["nightly"] }
-trouble-host = { version = "0.1.0", features = ["gatt"] }
+trouble-host = { version = "0.2.0", features = ["scan", "central"] }
+
 esp-hal-smartled = { version = "0.15.0", features = ["esp32c6"] }
 smart-leds = "0.4.0"
 log = "0.4.27"
