--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,34 +8,33 @@ name = "soulstar"
 path = "src/main.rs"
 
 [features]
-default = ["log-uart"]
-log-uart = ["dep:esp-println"]  # For Wokwi (UART output)
-log-rtt = ["dep:rtt-target"]    # For probe-rs (RTT output)
 
 [dependencies]
+defmt = { version = "1.0.1" }
+defmt-rtt = { version = "1.0.0" }
 embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "arch-riscv32"] }
 embassy-futures = { version = "0.1.1" }
 embassy-sync = { version = "0.7.0", features = ["log"] }
 embassy-time = "0.4.0"
 esp-alloc = "0.8.0"
+esp-backtrace = { version = "0.16.0", features = [ "esp32c6", "panic-handler", "exception-handler", "defmt"] }
 esp-bootloader-esp-idf = "0.1.0"
-esp-hal = { version = "=1.0.0-beta.1", features = ["esp32c6", "unstable"] }
+esp-hal = { version = "=1.0.0-beta.1", features = ["esp32c6", "unstable", "defmt"] }
 esp-hal-embassy = { version = "0.8.1", features = ["esp32c6"] }
 esp-hal-smartled = { version = "0.15.0", features = ["esp32c6"] }
-esp-println = { version = "0.14.0", features = ["esp32c6", "log-04"], optional = true }
+esp-println = { version = "0.14.0", features = ["esp32c6", "log-04"] }
 esp-wifi = { version = "0.14.1", features = [
     "ble",
     "builtin-scheduler",
     "esp-alloc",
     "esp32c6",
+    "defmt"
     #"log-04",
 ] }
-heapless = "0.8"
-log = "0.4.27"
-rtt-target = { version = "0.6.1", features = ["log"], optional = true }
+heapless = { version = "0.8", features = ["defmt-03"] }
 smart-leds = "0.4.0"
-static_cell = { version = "2.1.0", features = ["nightly"] }
-trouble-host = { version = "0.2.0", features = ["scan", "central"] }
+static_cell = { version = "2.1.1" }
+trouble-host = { version = "0.2.0", features = ["scan", "central", "defmt"] }
 
 [profile.dev]
 # Rust debug is too slow.
