--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,10 +4,9 @@ runner = "probe-rs run --chip=esp32c6 --preverify --always-print-stacktrace --no
 [build]
 rustflags = [
   # Required to obtain backtraces (e.g. when using the "esp-backtrace" crate.)
-  # NOTE: May negatively impact performance of produced code
+  # NOTE: May negatively impact the performance of the code
   "-C", "force-frame-pointers",
   # Needed for the defmt package
-#  "-C", "link-arg=-Tlink.x",
   "-C", "link-arg=-Tdefmt.x",
 ]
 
