--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,29 +12,29 @@ path = "src/main.rs"
 [dependencies]
 defmt = { version = "1.0.1" }
 defmt-rtt = { version = "1.0.0" }
-embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "arch-riscv32"] }
+embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "arch-riscv32", "defmt"] }
 embassy-futures = { version = "0.1.1" }
-embassy-sync = { version = "0.7.0", features = ["log"] }
-embassy-time = "0.4.0"
+embassy-sync = { version = "0.7.0", features = ["defmt"] }
+embassy-time = { version = "0.4.0", features = ["defmt-timestamp-uptime-ms"] }
 esp-alloc = "0.8.0"
 esp-backtrace = { version = "0.16.0", features = [ "esp32c6", "panic-handler", "exception-handler", "defmt"] }
 esp-bootloader-esp-idf = "0.1.0"
 esp-hal = { version = "=1.0.0-beta.1", features = ["esp32c6", "unstable", "defmt"] }
-esp-hal-embassy = { version = "0.8.1", features = ["esp32c6"] }
+esp-hal-embassy = { version = "0.8.1", features = ["esp32c6", "defmt"] }
 esp-hal-smartled = { version = "0.15.0", features = ["esp32c6"] }
-esp-println = { version = "0.14.0", features = ["esp32c6", "log-04"] }
+esp-println = { version = "0.14.0", features = ["esp32c6"] }
 esp-wifi = { version = "0.14.1", features = [
     "ble",
     "builtin-scheduler",
     "esp-alloc",
     "esp32c6",
     "defmt"
-    #"log-04",
 ] }
-heapless = { version = "0.8", features = ["defmt-03"] }
+heapless = { version = "0.8" }
 smart-leds = "0.4.0"
 static_cell = { version = "2.1.1" }
-trouble-host = { version = "0.2.0", features = ["scan", "central", "defmt"] }
+# trouble-host = { version = "0.2.0", features = ["scan", "central", "defmt"] }
+trouble-host = { path = "../trouble/host", features = ["scan", "central", "defmt"] } # Local clone has fixes we need.
 
 [profile.dev]
 # Rust debug is too slow.
