--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,10 @@ static_cell = { version = "2.1.1" }
 # trouble-host = { version = "0.2.0", features = ["scan", "central", "defmt"] }
 trouble-host = { path = "../trouble/host", features = ["scan", "central", "defmt"] } # Local clone has fixes we need.
 
+[build-dependencies]
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
+
 [profile.dev]
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
