--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,7 @@ esp-wifi = { version = "0.14.1", features = [
 heapless = { version = "0.8" }
 smart-leds = "0.4.0"
 static_cell = { version = "2.1.1" }
-# trouble-host = { version = "0.2.0", features = ["scan", "central", "defmt"] }
-trouble-host = { path = "../trouble/host", features = ["scan", "central", "defmt"] } # Local clone has fixes we need.
+trouble-host = { version = "0.2", features = ["scan", "central", "defmt"] }
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive"] }
