--- a/souls.toml
+++ b/souls.toml
@@ -1,14 +1,18 @@
+# Colours from the original ab-hive-mind palette
+# See http://colorbrewer2.org/?type=qualitative&scheme=Pastel1&n=8
+# We just use primaries for easy ID
+
 [[device]]
 id = "dave"
 bt_name = "Dr Duif"
-color = [20, 0, 0]
+color = [0xFF, 0x00, 0x00]
 
 [[device]]
 id = "charl"
 bt_name = "DR CHAAAAARL"
-color = [0, 20, 0]
+color = [0x00, 0xFF, 0x00]
 
 [[device]]
 id = "peter"
 bt_name = "Dr Krekel"
-color = [0, 0, 20] 
+color = [0x00, 0x00, 0xFF]
