- Use random address for MAC - Send TX power in advertisement

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ heapless = { version = "0.8" }
 smart-leds = "0.4.0"
 static_cell = { version = "2.1.1" }
 trouble-host = { version = "0.2", features = ["scan", "central", "defmt"] }
+rand_core = "0.6.4"
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive"] }
