--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ embassy-time = { version = "0.4.0", features = ["defmt-timestamp-uptime-ms"] }
 esp-alloc = "0.8.0"
 esp-backtrace = { version = "0.16.0", features = [ "esp32c6", "panic-handler", "exception-handler", "defmt"] }
 esp-bootloader-esp-idf = "0.1.0"
-esp-hal = { version = "=1.0.0-beta.1", features = ["esp32c6", "unstable", "defmt"] }
+esp-hal = { version = "1.0.0-beta.1", features = ["esp32c6", "unstable", "defmt"] }
 esp-hal-embassy = { version = "0.8.1", features = ["esp32c6", "defmt"] }
 esp-hal-smartled = { version = "0.15.0", features = ["esp32c6"] }
 esp-println = { version = "0.14.0", features = ["esp32c6"] }
@@ -32,14 +32,14 @@ esp-wifi = { version = "0.14.1", features = [
 ] }
 fastrand = { version = "2.3.0", default-features = false }
 heapless = { version = "0.8" }
-rand_core = "0.6.4"
+rand_core = "0.9.3"
 smart-leds = "0.4.0"
 static_cell = { version = "2.1.1" }
 trouble-host = { version = "0.2", features = ["scan", "central", "defmt"] }
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.8"
+toml = "0.9.2"
 
 [profile.dev]
 # Rust debug is too slow.
