--- a/souls.toml
+++ b/souls.toml
@@ -5,14 +5,14 @@
 [[device]]
 id = "nefario"
 bt_name = "Dr Nefario"
-color = [0xFF, 0x00, 0x00]
+colour = [0xFF, 0x00, 0x00]
 
 [[device]]
 id = "strange"
 bt_name = "Dr Strange"
-color = [0x00, 0xFF, 0x00]
+colour = [0x00, 0xFF, 0x00]
 
 [[device]]
 id = "who"
 bt_name = "Dr Who"
-color = [0x00, 0x00, 0xFF]
+colour = [0x00, 0x00, 0xFF]
