--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -18,3 +18,4 @@ build-std = ["alloc", "core"]
 # Sets a default soul when running Cargo without an external environment variable set.
 [env]
 SOUL_ID = "nefario"
+DEFMT_LOG = "info"
