--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6", "defmt", "e
 esp-hal = { version = "1.0.0-rc.0", features = ["esp32c6", "unstable", "defmt"] }
 esp-hal-embassy = { version = "0.9.0", features = ["esp32c6", "defmt"] }
 #esp-hal-smartled = { version = "0.16.0", features = ["esp32c6"] }
-esp-hal-smartled = { path = "../tmp/esp-hal-community/esp-hal-smartled", features = ["esp32c6"] }
+esp-hal-smartled = { path = "../esp-hal-community/esp-hal-smartled", features = ["esp32c6"] }
 esp-println = { version = "0.15.0", features = ["esp32c6"] }
 esp-wifi = { version = "0.15.0", features = [
     "ble",
@@ -48,7 +48,7 @@ toml = "0.9.2"
 opt-level = "s"
 
 [profile.release]
-codegen-units = 1        # LLVM can perform better optimizations using a single thread
+codegen-units = 1        # LLVM can perform better optimisations using a single thread
 debug = 2
 debug-assertions = false
 incremental = false
