--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,41 +10,31 @@ path = "src/main.rs"
 [features]
 
 [dependencies]
+bt-hci = { version = "0.6.0" }
 defmt = { version = "1.0.1" }
-defmt-rtt = { version = "1.0.0" }
-embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "arch-riscv32", "defmt"] }
-embassy-futures = { version = "0.1.1" }
-embassy-sync = { version = "0.7.1", features = ["defmt"] }
-embassy-time = { version = "0.4.0", features = ["defmt-timestamp-uptime-ms"] }
-esp-alloc = "0.8.0"
-esp-backtrace = { version = "0.17.0", features = [ "esp32c6", "defmt", "panic-handler"] }
-esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6", "defmt", "esp-rom-sys"] }
-esp-hal = { version = "1.0.0-rc.0", features = ["esp32c6", "unstable", "defmt"] }
-esp-hal-embassy = { version = "0.9.0", features = ["esp32c6", "defmt"] }
-
+defmt-rtt = "1.1.0"
+embassy-executor = { version = "0.9.1", features = ["defmt"] }
+embassy-futures = { version = "0.1" }
+embassy-sync = { version = "0.7", features = ["defmt"] }
+embassy-time = { version = "0.5", features = ["defmt-timestamp-uptime-ms"] }
+esp-alloc = "0.9"
+esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c6", "defmt", "esp-rom-sys"] }
+esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable", "defmt"] }
 # These options are temporary until the esp-hal-smartled latest version has been released to crates.io
-#esp-hal-smartled = { version = "0.16.0", features = ["esp32c6"] }  # It should be this
-#esp-hal-smartled = { path = "../esp-hal-community/esp-hal-smartled", features = ["esp32c6"] } # Local development
+#esp-hal-smartled = { version = "0.17.0", features = ["esp32c6"] }
 esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", features = ["esp32c6"] } # Temporary but it works for everyone
-
-esp-println = { version = "0.15.0", features = ["esp32c6"] }
-esp-wifi = { version = "0.15.0", features = [
-    "ble",
-    "builtin-scheduler",
-    "esp-alloc",
-    "esp32c6",
-    "defmt"
-] }
+esp-radio = { version = "0.17.0", features = ["ble", "esp-alloc", "esp32c6", "defmt", "unstable"] }
+esp-rtos = { version = "0.2.0", features = ["defmt", "embassy","esp-alloc", "esp-radio", "esp32c6", ] }
 fastrand = { version = "2.3.0", default-features = false }
-heapless = { version = "0.8" }
+heapless = { version = "0.9" }
 rand_core = "0.9.3"
 smart-leds = "0.4.0"
-static_cell = { version = "2.1.1" }
-trouble-host = { version = "0.2.4", features = ["scan", "central", "defmt"] }
+static_cell = { version = "2.1" }
+trouble-host = { version = "0.5", features = ["scan", "central", "defmt"] }
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.9.5"
+toml = "0.9"
 
 [profile.dev]
 # Rust debug is too slow.
