--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ toml = "0.9"
 # Rust debug is too slow.
 # For debug builds always builds with some optimization
 opt-level = "s"
+#strip = true
 
 [profile.release]
 codegen-units = 1        # LLVM can perform better optimisations using a single thread
